<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="team27.healthe.ui.HomeActivity">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
  <item
        android:id="@+id/action_body_locations"
        android:orderInCategory="75"
        android:title="@string/string_action_body_locations"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="50"
        android:title="@string/action_edit"
        app:showAsAction="never" />
  <item
        android:id="@+id/action_QRcode"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="60"
        android:title="QR Code"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_map_view"
        android:icon="@android:drawable/ic_dialog_map"
        android:orderInCategory="40"
        android:title="Map View"
        app:showAsAction="always" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
</menu>
